Edited Index page, Layout and Baby entity

--- a/FirstHundredFoods/Pages/Index.cshtml
+++ b/FirstHundredFoods/Pages/Index.cshtml
@@ -5,6 +5,12 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Ready to start your baby on solid food?</h1>
+    <p>Weaning is a big and important milestone in every child's life. Whatever your feeding philosophy is, exposure to a wide variety of foods is not only important to your child's health, but also fun!</p>
+    <p>Use this program to
+        <ul>
+            <li>find inspiration on what to foods to offer</li>
+            <li>lorem ipsum</li>
+        </ul>
+    </p>
 </div>
