--- a/FirstHundredFoods/Pages/Shared/_Layout.cshtml
+++ b/FirstHundredFoods/Pages/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Foods/Index">Foods</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Allergens/Index">Common Allergens</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Allergens/Index">Allergens</a>
                         </li>                                                
                     </ul>
                 </div>
