Reworded copy for landing page

--- a/FirstHundredFoods/Pages/Index.cshtml
+++ b/FirstHundredFoods/Pages/Index.cshtml
@@ -6,11 +6,14 @@
 
 <div class="text-center">
     <h1 class="display-4">Ready to start your baby on solid food?</h1>
-    <p>Weaning is a big and important milestone in every child's life. Whatever your feeding philosophy is, exposure to a wide variety of foods is not only important to your child's health, but also fun!</p>
-    <p>Use this program to
+    <p></p>
+    <p>Weaning is an important milestone in every child's life. Whatever your feeding philosophy is, exposure to a wide variety of foods is not only important to your child's health, but can also be fun!</p>
+    <p>Use this application to
         <ul>
             <li>find inspiration on what to foods to offer</li>
-            <li>lorem ipsum</li>
+            <li>keep track of the foods you have already tried</li>
+            <li>add new foods that are not on our list</li>
         </ul>
     </p>
+    <p>Report any bugs or issue <a href="github.com/awreelyuh/">here</a>.</p>
 </div>
