--- a/FirstHundredFoods/Pages/Babies/Details.cshtml
+++ b/FirstHundredFoods/Pages/Babies/Details.cshtml
@@ -30,10 +30,16 @@
             @Html.DisplayFor(model => model.Baby.DateOfBirth)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Baby.Parent)
+            @Html.DisplayFor(model => model.Baby.Parent.ID)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Baby.Parent.ID)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Baby.Parent)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Baby.Parent)
         </dd>
     </dl>
 </div>
