--- a/FirstHundredFoods/Pages/Babies/Create.cshtml
+++ b/FirstHundredFoods/Pages/Babies/Create.cshtml
@@ -16,30 +16,32 @@
             <div class="form-group">
                 <label asp-for="Baby.ParentID" class="control-label"></label>
                 <select asp-for="Baby.ParentID" class ="form-control" asp-items="ViewBag.ParentID"></select>
+                <br />
             </div>
             <div class="form-group">
                 <label asp-for="Baby.FirstName" class="control-label"></label>
-                <input asp-for="Baby.FirstName" class="form-control" />
+                <input asp-for="Baby.FirstName" class="form-control" /><br />
                 <span asp-validation-for="Baby.FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Baby.LastName" class="control-label"></label>
-                <input asp-for="Baby.LastName" class="form-control" />
+                <input asp-for="Baby.LastName" class="form-control" /><br />
                 <span asp-validation-for="Baby.LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Baby.DateOfBirth" class="control-label"></label>
-                <input asp-for="Baby.DateOfBirth" class="form-control" />
+                <input asp-for="Baby.DateOfBirth" class="form-control" /><br />
                 <span asp-validation-for="Baby.DateOfBirth" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" /><br />
             </div>
         </form>
     </div>
 </div>
 
 <div>
+    <br />
     <a asp-page="Index">Back to List</a>
 </div>
 
