--- a/FirstHundredFoods/Pages/Babies/Edit.cshtml
+++ b/FirstHundredFoods/Pages/Babies/Edit.cshtml
@@ -17,31 +17,33 @@
             <div class="form-group">
                 <label asp-for="Baby.Parent" class="control-label"></label>
                 <select asp-for="Baby.Parent" class="form-control" asp-items="ViewBag.Parent"></select>
+                <br />
                 <span asp-validation-for="Baby.Parent" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Baby.FirstName" class="control-label"></label>
-                <input asp-for="Baby.FirstName" class="form-control" />
+                <input asp-for="Baby.FirstName" class="form-control" /><br />
                 <span asp-validation-for="Baby.FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Baby.LastName" class="control-label"></label>
-                <input asp-for="Baby.LastName" class="form-control" />
+                <input asp-for="Baby.LastName" class="form-control" /><br />
                 <span asp-validation-for="Baby.LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Baby.DateOfBirth" class="control-label"></label>
-                <input asp-for="Baby.DateOfBirth" class="form-control" />
+                <input asp-for="Baby.DateOfBirth" class="form-control" /><br />
                 <span asp-validation-for="Baby.DateOfBirth" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" /><br />
             </div>
         </form>
     </div>
 </div>
 
 <div>
+    <br />
     <a asp-page="./Index">Back to List</a>
 </div>
 
