--- a/FirstHundredFoods/Pages/Foods/Create.cshtml
+++ b/FirstHundredFoods/Pages/Foods/Create.cshtml
@@ -16,15 +16,16 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Food.Name" class="control-label"></label>
-                <input asp-for="Food.Name" class="form-control" />
+                <input asp-for="Food.Name" class="form-control" /><br />
                 <span asp-validation-for="Food.Name" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="Food.ContainsAllergen" /> @Html.DisplayNameFor(model => model.Food.ContainsAllergen)
+                    <br />
                 </label>
             </div>
-            <div class="form-group">
+            <div class="form-group"><br />
                 <label asp-for="Food.FoodType" class="control-label"></label>
                 <select asp-for="Food.FoodType" asp-items="Html.GetEnumSelectList<FoodType>()" >
                     <option value="">&lt;Select&gt;</option>
@@ -32,13 +33,15 @@
                 <span asp-validation-for="Food.FoodType" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <br />
+                <input type="submit" value="Create" class="btn btn-primary" /><br />
             </div>
         </form>
     </div>
 </div>
 
 <div>
+    <br />
     <a asp-page="Index">Back to List</a>
 </div>
 
