--- a/FirstHundredFoods/Pages/Parents/Create.cshtml
+++ b/FirstHundredFoods/Pages/Parents/Create.cshtml
@@ -15,22 +15,23 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Parent.FirstName" class="control-label"></label>
-                <input asp-for="Parent.FirstName" class="form-control" />
+                <input asp-for="Parent.FirstName" class="form-control" /><br />
                 <span asp-validation-for="Parent.FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Parent.LastName" class="control-label"></label>
-                <input asp-for="Parent.LastName" class="form-control" />
+                <input asp-for="Parent.LastName" class="form-control" /><br />
                 <span asp-validation-for="Parent.LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" /><br />
             </div>
         </form>
     </div>
 </div>
 
 <div>
+    <br />
     <a asp-page="Index">Back to List</a>
 </div>
 
