--- a/FirstHundredFoods/Pages/Parents/Edit.cshtml
+++ b/FirstHundredFoods/Pages/Parents/Edit.cshtml
@@ -16,22 +16,23 @@
             <input type="hidden" asp-for="Parent.ID" />
             <div class="form-group">
                 <label asp-for="Parent.FirstName" class="control-label"></label>
-                <input asp-for="Parent.FirstName" class="form-control" />
+                <input asp-for="Parent.FirstName" class="form-control" /><br />
                 <span asp-validation-for="Parent.FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Parent.LastName" class="control-label"></label>
-                <input asp-for="Parent.LastName" class="form-control" />
+                <input asp-for="Parent.LastName" class="form-control" /><br />
                 <span asp-validation-for="Parent.LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" /><br />
             </div>
         </form>
     </div>
 </div>
 
 <div>
+    <br />
     <a asp-page="./Index">Back to List</a>
 </div>
 
